--- a/DevCommFrontend/index.html
+++ b/DevCommFrontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/Img/codepairImgcopy.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/Img/logo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodePair</title>
   </head>
